building Minimal VM fails with error: comparison of unsigned expression < 0 is always false [-Werror=type-limits]

XMLWordPrintable

    • gc
    • b10
    • Verified

      On Linux x86, ARM, AARCH64:

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-minimal_libjvm_objs_weakProcessorPhases.o:
      /home/bellsoft/jdk/src/hotspot/share/gc/shared/weakProcessorPhases.cpp: In static member function ‘static bool WeakProcessorPhases::is_serial(WeakProcessorPhases::Phase)’:
      /home/bellsoft/jdk/src/hotspot/share/gc/shared/weakProcessorPhases.cpp:62:46: error: comparison of unsigned expression < 0 is always false [-Werror=type-limits]
         return (index(phase) - serial_phase_start) < serial_phase_count;
                                                    ^
      cc1plus: all warnings being treated as errors

            Assignee:
            Aleksei Voitylov
            Reporter:
            Aleksei Voitylov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: