8210164: building Minimal VM fails with error: comparison of unsigned expression < 0 is always false [-Werror=type-limits]

Conditionalize compare with serial_phase_count.

Reviewed-by: kbarrett, shade